# stremlit_test2

./: pyproject.toml  streamlit_app.py
