[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = "Aprendendo a usar o streamlit"
authors = ["Marcelo M G da Silva <mqestatistico@gmail.com>"]
license = "AUO: Academic Use Only License"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
